<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.editprofile.EditProfileFragment"
    android:background="@drawable/bgr"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            >

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="200dp"
                >

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/hit"
                    />

            </androidx.cardview.widget.CardView>

            <ImageView
                android:layout_marginTop="80dp"
                android:layout_marginStart="90dp"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/mayanh"
                />

        </RelativeLayout>


    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/boder_editprofile"
            android:hint="@string/full_name"
            android:paddingStart="10dp"
            android:fontFamily="@font/comfortaaregular"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/boder_editprofile"
            android:hint="@string/user_name"
            android:paddingStart="10dp"
            android:fontFamily="@font/comfortaaregular"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/boder_editprofile"
            android:hint="@string/email"
            android:paddingStart="10dp"
            android:fontFamily="@font/comfortaaregular"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/boder_editprofile"
            android:hint="@string/genger"
            android:paddingStart="10dp"
            android:fontFamily="@font/comfortaaregular"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/boder_editprofile"
            android:hint="@string/birthday"
            android:paddingStart="10dp"
            android:fontFamily="@font/comfortaaregular"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/boder_update"
            android:text="@string/update"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:fontFamily="@font/comfortaabold"
            />

    </LinearLayout>

</LinearLayout>